fix(update-by): Set as flex to better handle wraping

--- a/vue/src/assets/styles/global/utils.scss
+++ b/vue/src/assets/styles/global/utils.scss
@@ -100,7 +100,7 @@
   }
 
   .show-sm {
-    display: initial !important;
+    display: flex !important;
   }
 
   .half-circle {
